pwrp-interface-orig/rt_net.h

struct net_sMessage {
	pwr_tBoolean xdr;
	pwr_tUInt32 msn;
	pwr_tNodeId nid;
};
typedef struct net_sMessage net_sMessage;
struct net_sClassDef {
	pwr_tInt32 Editor;
	pwr_tInt32 Method;
	pwr_tUInt32 Flags;
	pwr_tUInt32 NumOfObjBodies;
	pwr_tInt32 PopEditor;
};
typedef struct net_sClassDef net_sClassDef;
struct net_sObjBodyDef {
	pwr_tStructName StructName;
	pwr_tUInt32 NumOfParams;
	pwr_tUInt32 Size;
	pwr_tUInt32 NextAix;
	pwr_tUInt32 Flags;
};
typedef struct net_sObjBodyDef net_sObjBodyDef;
struct net_sParInfo {
	pwr_tPgmName PgmName;
	pwr_eType Type;
	pwr_tUInt32 Offset;
	pwr_tUInt32 Size;
	pwr_tUInt32 Flags;
	pwr_tUInt32 Elements;
	pwr_tUInt32 ParamIndex;
};
typedef struct net_sParInfo net_sParInfo;
struct net_sParam {
	net_sParInfo Info;
	pwr_tTypeId TypeRef;
};
typedef struct net_sParam net_sParam;
typedef union {
 pwr_tBitMask m;
 pwr_32Bits (
 pwr_Bits( isParent , 1),
 pwr_Bits( isAliasClient , 1),
 pwr_Bits( isAliasServer , 1),
 pwr_Bits( isMountClient , 1),
 pwr_Bits( inSibList , 1),
 pwr_Bits( hasSubClass , 1),
 pwr_Bits( fill0 , 2),,

 pwr_Bits( fill1 , 8),,,,,,,,
 pwr_Bits( fill2 , 8),,,,,,,,
 pwr_Bits( fill3 , 8),,,,,,,
 ) b;

#define net_mGo__ 0
#define net_mGo_isParent pwr_Bit(0)
#define net_mGo_isAliasClient pwr_Bit(1)
#define net_mGo_isAliasServer pwr_Bit(2)
#define net_mGo_isMountClient pwr_Bit(3)
#define net_mGo_inSibList pwr_Bit(4)
#define net_mGo_hasSubClass pwr_Bit(5)

#define net_mGo_isClient (net_mGo_isAliasClient|net_mGo_isMountClient)

#define net_mGo_ (~net_mGo__)
} net_mGo;
struct net_sOixLink {
	pwr_tObjectIx flink;
	pwr_tObjectIx blink;
};
typedef struct net_sOixLink net_sOixLink;
struct net_sGobject {
	pwr_tObjid oid;
	pwr_tClassId cid;
	cdh_sFamily f;
	net_sOixLink sib;
	pwr_tObjid soid;
	pwr_tUInt32 size;
	net_mGo flags;
};
typedef struct net_sGobject net_sGobject;
struct net_sSiblings {
	pwr_tObjectIx flink;
	pwr_tObjectIx newblink;
	pwr_tObjectIx blink;
	pwr_tObjectIx newflink;
};
typedef struct net_sSiblings net_sSiblings;
struct net_sParent {
	pwr_tObjid oid;
	pwr_tObjid soid;
};
typedef struct net_sParent net_sParent;
struct net_sNotify {
	net_sMessage hdr;
	pwr_tObjid oid;
};
typedef struct net_sNotify net_sNotify;
struct net_sCreateObject {
	net_sNotify notify;
	net_sParent par;
	net_sSiblings sib;
};
typedef struct net_sCreateObject net_sCreateObject;
struct net_sDeleteObject {
	net_sNotify notify;
	net_sParent par;
	net_sSiblings sib;
};
typedef struct net_sDeleteObject net_sDeleteObject;
struct net_sMoveObject {
	net_sNotify notify;
	net_sOixLink sib;
	net_sParent opar;
	net_sSiblings osib;
	net_sParent npar;
	net_sSiblings nsib;
};
typedef struct net_sMoveObject net_sMoveObject;
struct net_sRenameObject {
	net_sNotify notify;
	cdh_sFamily f;
};
typedef struct net_sRenameObject net_sRenameObject;
struct net_sTime {
	u_int tv_sec;
	u_int tv_nsec;
};
typedef struct net_sTime net_sTime;
struct net_sGvolume {
	pwr_tVolumeId vid;
	pwr_tObjid oid;
	cdh_sObjName name;
	pwr_tClassId cid;
	pwr_tNodeId nid;
	net_sTime time;
};
typedef struct net_sGvolume net_sGvolume;
struct net_sGvolume7 {
	pwr_tVolumeId vid;
	pwr_tObjid oid;
	cdh_sObjName name;
	pwr_tClassId cid;
	pwr_tNodeId nid;
};
typedef struct net_sGvolume7 net_sGvolume7;
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tUInt32 ctx pwr_dPacked;
 pwr_tUInt32 count pwr_dPacked; /* # of headers  */
 net_sGvolume g[1] pwr_dPacked; /* Array of volume headers */
} net_sVolumes;
bool_t xdr_net_sVolumes();
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tUInt32 ctx pwr_dPacked;
 pwr_tUInt32 count pwr_dPacked; /* # of headers  */
 net_sGvolume7 g[1] pwr_dPacked; /* Array of volume headers */
} net_sVolumes7;
bool_t xdr_net_sVolumes7();
struct net_sMount {
	pwr_tVolumeId vid;
};
typedef struct net_sMount net_sMount;
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tUInt32 ctx pwr_dPacked;
 pwr_tUInt32 count pwr_dPacked; /* # of headers  */
 net_sMount mount[1] pwr_dPacked;/* Array of mount requests */
} net_sVolumesR;
bool_t xdr_net_sVolumesR();
struct net_sGattribute {
	net_sGobject ao;
	net_sParam ab;
};
typedef struct net_sGattribute net_sGattribute;
struct net_sGclass {
	net_sTime time;
	pwr_tBitMask dbsFlags;
	net_sGobject co;
	net_sClassDef cb;
	net_sGobject bo;
	net_sObjBodyDef bb;
	pwr_tUInt32 size;
	pwr_tUInt32 acount;
};
typedef struct net_sGclass net_sGclass;
struct net_sGetGclass {
	net_sMessage hdr;
	pwr_tUInt32 ver;
	pwr_tClassId cid;
	pwr_tUInt32 aidx;
};
typedef struct net_sGetGclass net_sGetGclass;
typedef struct {
 net_sMessage hdr;/**< Header */
 pwr_tUInt32 ver;/**< see net_sMessage for comment */
 pwr_tStatus sts;/**< Status */

 /* The data below is only valid if ODD(sts) */

 pwr_tObjName vname; /**< Volume name, needed if volume must be created */
 pwr_tUInt32 acntmsg; /**< Number of attributes in this message. */
 pwr_tUInt32 saidx; /**< Starting attribute index */
 pwr_tUInt32 naidx; /**< Index for next attribute which didn't fit 
                                    in this message or ULONG_MAX if all included */
 net_sGclass gclass;
 net_sGattribute attr[1]; /**< Array of attributes */
} net_sGetGclassR;
bool_t xdr_net_sGetGclassR(XDR *xdrs, net_sGetGclassR *objp);
struct net_sCattribute {
	pwr_tAix aix;
	pwr_mAdef flags;
	pwr_eType type;
	pwr_tUInt32 offs;
	pwr_tUInt32 size;
	pwr_tUInt32 elem;
	pwr_tUInt32 moffset;
};
typedef struct net_sCattribute net_sCattribute;
struct net_sCclass {
	pwr_tClassId cid;
	net_sTime time;
	pwr_tUInt32 size;
	pwr_tUInt32 acount;
};
typedef struct net_sCclass net_sCclass;
struct net_sGetCclass {
	net_sMessage hdr;
	pwr_tUInt32 ver;
	pwr_tClassId cid;
	net_sTime time;
	pwr_tUInt32 aidx;
};
typedef struct net_sGetCclass net_sGetCclass;
typedef struct {
 net_sMessage hdr; /**< Header */
 pwr_tUInt32 ver; /**< see net_sMessage for comment */
 pwr_tStatus sts; /**< Status */
 pwr_tBoolean equal; /**< The remote class is equal to the native */

 /* 
   * The data below is only valid if ODD(sts) and !equal 
   */

 pwr_tUInt32 acntmsg; /**< Number of attributes in this message. */
 pwr_tUInt32 saidx; /**< Starting attribute index */
 pwr_tUInt32 naidx; /**< Index for next attribute which didn't fit 
                                    in this message or ULONG_MAX if all included */
 net_sCclass cclass;
 net_sCattribute attr[1]; /**< Array of attributes */
} net_sGetCclassR;
bool_t xdr_net_sGetCclassR(XDR *xdrs, net_sGetCclassR *objp);
struct net_sFileList {
	net_sMessage hdr;
	char dir[256];
	char pattern[40];
};
typedef struct net_sFileList net_sFileList;
typedef struct {
 net_sMessage hdr; /**< Header */
 pwr_tStatus sts; /**< Status */
 pwr_tUInt32 filecnt; /**< Number of files found. */
 char files[1]; /**< List of files */
} net_sFileListR;
bool_t xdr_net_sFileListR(XDR *xdrs, net_sFileListR *objp);
struct net_sGetCircBuffer {
	net_sMessage hdr;
	pwr_sAttrRef circ_aref;
	pwr_tUInt32 resolution;
	pwr_tUInt32 samples;
	pwr_tUInt32 bufsize;
};
typedef struct net_sGetCircBuffer net_sGetCircBuffer;