pwrp-interface-orig/rt_net_h.ads


   type net_sCreateObject is record
      notify : aliased net_sNotify;  -- rt_net.h:487
      par : aliased net_sParent;  -- rt_net.h:488
      sib : aliased net_sSiblings;  -- rt_net.h:489
   end record;
   pragma Convention (C_Pass_By_Copy, net_sCreateObject);  -- rt_net.h:486

   type net_sDeleteObject is record
      notify : aliased net_sNotify;  -- rt_net.h:494
      par : aliased net_sParent;  -- rt_net.h:495
      sib : aliased net_sSiblings;  -- rt_net.h:496
   end record;
   pragma Convention (C_Pass_By_Copy, net_sDeleteObject);  -- rt_net.h:493

   type net_sMoveObject is record
      notify : aliased net_sNotify;  -- rt_net.h:501
      sib : aliased net_sOixLink;  -- rt_net.h:502
      opar : aliased net_sParent;  -- rt_net.h:503
      osib : aliased net_sSiblings;  -- rt_net.h:504
      npar : aliased net_sParent;  -- rt_net.h:505
      nsib : aliased net_sSiblings;  -- rt_net.h:506
   end record;
   pragma Convention (C_Pass_By_Copy, net_sMoveObject);  -- rt_net.h:500

   type net_sRenameObject is record
      notify : aliased net_sNotify;  -- rt_net.h:511
      f : aliased co_cdh_h.cdh_sFamily;  -- rt_net.h:512
   end record;
   pragma Convention (C_Pass_By_Copy, net_sRenameObject);  -- rt_net.h:510

   type net_sTime is record
      tv_sec : aliased sys_types_h.u_int;  -- rt_net.h:517
      tv_nsec : aliased sys_types_h.u_int;  -- rt_net.h:518
   end record;
   pragma Convention (C_Pass_By_Copy, net_sTime);  -- rt_net.h:516

   type net_sGvolume is record
      vid : aliased pwr_h.pwr_tVolumeId;  -- rt_net.h:523
      oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:524
      name : aliased co_cdh_h.cdh_sObjName;  -- rt_net.h:525
      cid : aliased pwr_h.pwr_tClassId;  -- rt_net.h:526
      nid : aliased pwr_h.pwr_tNodeId;  -- rt_net.h:527
      time : aliased net_sTime;  -- rt_net.h:528
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGvolume);  -- rt_net.h:522

   type net_sGvolume7 is record
      vid : aliased pwr_h.pwr_tVolumeId;  -- rt_net.h:533
      oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:534
      name : aliased co_cdh_h.cdh_sObjName;  -- rt_net.h:535
      cid : aliased pwr_h.pwr_tClassId;  -- rt_net.h:536
      nid : aliased pwr_h.pwr_tNodeId;  -- rt_net.h:537
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGvolume7);  -- rt_net.h:532

  -- Header  
   type net_sVolumes_g_array is array (0 .. 0) of aliased net_sGvolume;
   type net_sVolumes is record
      hdr : aliased net_sMessage;  -- rt_net.h:544
      ctx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:545
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:546
      g : aliased net_sVolumes_g_array;  -- rt_net.h:547
   end record;
   pragma Convention (C_Pass_By_Copy, net_sVolumes);  -- rt_net.h:548

   --  skipped anonymous struct anon_139

  -- # of headers   
  -- Array of volume headers  
   function xdr_net_sVolumes return rpc_types_h.bool_t;  -- rt_net.h:550
   pragma Import (C, xdr_net_sVolumes, "xdr_net_sVolumes");

  -- Header  
   type net_sVolumes7_g_array is array (0 .. 0) of aliased net_sGvolume7;
   type net_sVolumes7 is record
      hdr : aliased net_sMessage;  -- rt_net.h:553
      ctx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:554
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:555
      g : aliased net_sVolumes7_g_array;  -- rt_net.h:556
   end record;
   pragma Convention (C_Pass_By_Copy, net_sVolumes7);  -- rt_net.h:557

   --  skipped anonymous struct anon_140

  -- # of headers   
  -- Array of volume headers  
   function xdr_net_sVolumes7 return rpc_types_h.bool_t;  -- rt_net.h:559
   pragma Import (C, xdr_net_sVolumes7, "xdr_net_sVolumes7");

   type net_sMount is record
      vid : aliased pwr_h.pwr_tVolumeId;  -- rt_net.h:563
   end record;
   pragma Convention (C_Pass_By_Copy, net_sMount);  -- rt_net.h:562

  -- Header  
   type net_sVolumesR_mount_array is array (0 .. 0) of aliased net_sMount;
   type net_sVolumesR is record
      hdr : aliased net_sMessage;  -- rt_net.h:567
      ctx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:568
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:569
      mount : aliased net_sVolumesR_mount_array;  -- rt_net.h:570
   end record;
   pragma Convention (C_Pass_By_Copy, net_sVolumesR);  -- rt_net.h:571

   --  skipped anonymous struct anon_141

  -- # of headers   
  -- Array of mount requests  
   function xdr_net_sVolumesR return rpc_types_h.bool_t;  -- rt_net.h:573
   pragma Import (C, xdr_net_sVolumesR, "xdr_net_sVolumesR");

   type net_sGattribute is record
      ao : aliased net_sGobject;  -- rt_net.h:577
      ab : aliased net_sParam;  -- rt_net.h:578
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGattribute);  -- rt_net.h:576

   type net_sGclass is record
      time : aliased net_sTime;  -- rt_net.h:583
      dbsFlags : aliased pwr_h.pwr_tBitMask;  -- rt_net.h:584
      co : aliased net_sGobject;  -- rt_net.h:585
      cb : aliased net_sClassDef;  -- rt_net.h:586
      bo : aliased net_sGobject;  -- rt_net.h:587
      bb : aliased net_sObjBodyDef;  -- rt_net.h:588
      size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:589
      acount : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:590
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGclass);  -- rt_net.h:582

   type net_sGetGclass is record
      hdr : aliased net_sMessage;  -- rt_net.h:595
      ver : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:596
      cid : aliased pwr_h.pwr_tClassId;  -- rt_net.h:597
      aidx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:598
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGetGclass);  -- rt_net.h:594

  --*< Header  
   type net_sGetGclassR_attr_array is array (0 .. 0) of aliased net_sGattribute;
   type net_sGetGclassR is record
      hdr : aliased net_sMessage;  -- rt_net.h:604
      ver : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:605
      sts : aliased pwr_h.pwr_tStatus;  -- rt_net.h:606
      vname : aliased pwr_h.pwr_tObjName;  -- rt_net.h:610
      acntmsg : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:611
      saidx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:612
      naidx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:613
      gclass : aliased net_sGclass;  -- rt_net.h:615
      attr : aliased net_sGetGclassR_attr_array;  -- rt_net.h:616
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGetGclassR);  -- rt_net.h:617

   --  skipped anonymous struct anon_142

  --*< see net_sMessage for comment  
  --*< Status  
  -- The data below is only valid if ODD(sts)  
  --*< Volume name, needed if volume must be created  
  --*< Number of attributes in this message.  
  --*< Starting attribute index  
  --*< Index for next attribute which didn't fit 
  --                                    in this message or ULONG_MAX if all included  

  --*< Array of attributes  
   function xdr_net_sGetGclassR (xdrs : access rpc_xdr_h.XDR; objp : access net_sGetGclassR) return rpc_types_h.bool_t;  -- rt_net.h:619
   pragma Import (C, xdr_net_sGetGclassR, "xdr_net_sGetGclassR");

   type net_sCattribute is record
      aix : aliased pwr_h.pwr_tAix;  -- rt_net.h:623
      flags : pwr_class_h.pwr_mAdef;  -- rt_net.h:624
      c_type : aliased pwr_class_h.pwr_eType;  -- rt_net.h:625
      offs : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:626
      size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:627
      elem : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:628
      moffset : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:629
   end record;
   pragma Convention (C_Pass_By_Copy, net_sCattribute);  -- rt_net.h:622

   type net_sCclass is record
      cid : aliased pwr_h.pwr_tClassId;  -- rt_net.h:634
      time : aliased net_sTime;  -- rt_net.h:635
      size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:636
      acount : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:637
   end record;
   pragma Convention (C_Pass_By_Copy, net_sCclass);  -- rt_net.h:633

   type net_sGetCclass is record
      hdr : aliased net_sMessage;  -- rt_net.h:642
      ver : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:643
      cid : aliased pwr_h.pwr_tClassId;  -- rt_net.h:644
      time : aliased net_sTime;  -- rt_net.h:645
      aidx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:646
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGetCclass);  -- rt_net.h:641

  --*< Header  
   type net_sGetCclassR_attr_array is array (0 .. 0) of aliased net_sCattribute;
   type net_sGetCclassR is record
      hdr : aliased net_sMessage;  -- rt_net.h:651
      ver : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:652
      sts : aliased pwr_h.pwr_tStatus;  -- rt_net.h:653
      equal : aliased pwr_h.pwr_tBoolean;  -- rt_net.h:654
      acntmsg : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:660
      saidx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:661
      naidx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:662
      cclass : aliased net_sCclass;  -- rt_net.h:664
      attr : aliased net_sGetCclassR_attr_array;  -- rt_net.h:665
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGetCclassR);  -- rt_net.h:666

   --  skipped anonymous struct anon_143

  --*< see net_sMessage for comment  
  --*< Status  
  --*< The remote class is equal to the native  
  -- 
  --   * The data below is only valid if ODD(sts) and !equal 
  --    

  --*< Number of attributes in this message.  
  --*< Starting attribute index  
  --*< Index for next attribute which didn't fit 
  --                                    in this message or ULONG_MAX if all included  

  --*< Array of attributes  
   function xdr_net_sGetCclassR (xdrs : access rpc_xdr_h.XDR; objp : access net_sGetCclassR) return rpc_types_h.bool_t;  -- rt_net.h:669
   pragma Import (C, xdr_net_sGetCclassR, "xdr_net_sGetCclassR");

   subtype net_sFileList_dir_array is Interfaces.C.char_array (0 .. 255);
   subtype net_sFileList_pattern_array is Interfaces.C.char_array (0 .. 39);
   type net_sFileList is record
      hdr : aliased net_sMessage;  -- rt_net.h:673
      dir : aliased net_sFileList_dir_array;  -- rt_net.h:674
      pattern : aliased net_sFileList_pattern_array;  -- rt_net.h:675
   end record;
   pragma Convention (C_Pass_By_Copy, net_sFileList);  -- rt_net.h:672

  --*< Header  
   subtype net_sFileListR_files_array is Interfaces.C.char_array (0 .. 0);
   type net_sFileListR is record
      hdr : aliased net_sMessage;  -- rt_net.h:681
      sts : aliased pwr_h.pwr_tStatus;  -- rt_net.h:682
      filecnt : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:683
      files : aliased net_sFileListR_files_array;  -- rt_net.h:684
   end record;
   pragma Convention (C_Pass_By_Copy, net_sFileListR);  -- rt_net.h:685

   --  skipped anonymous struct anon_144

  --*< Status  
  --*< Number of files found.  
  --*< List of files  
   function xdr_net_sFileListR (xdrs : access rpc_xdr_h.XDR; objp : access net_sFileListR) return rpc_types_h.bool_t;  -- rt_net.h:687
   pragma Import (C, xdr_net_sFileListR, "xdr_net_sFileListR");

   type net_sGetCircBuffer is record
      hdr : aliased net_sMessage;  -- rt_net.h:691
      circ_aref : aliased pwr_h.pwr_sAttrRef;  -- rt_net.h:692
      resolution : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:693
      samples : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:694
      bufsize : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:695
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGetCircBuffer);  -- rt_net.h:690
